--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^11.3.28",
+    "framer-motion": "^11.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
+    "smooth-scrollbar": "^8.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
