--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "framer-motion": "^11.7.0",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-intersection-observer": "^9.13.0",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
