--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.56.4",
+    "@react-three/fiber": "^8.13.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,10 +19,12 @@
     "react-intersection-observer": "^9.13.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.26.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
     "smooth-scrollbar": "^8.8.4",
+    "three": "^0.152.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
